<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:layoutDirection="ltr"
    android:scrollbars="none"
    tools:context=".Ui.SignUser.SendOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/icons_paper_plane_send" />

        <TextView
            android:id="@+id/textVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:text="@string/otp_verification" />

        <TextView
            android:id="@+id/textSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/send_code_otp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/_20"
                android:drawableStart="@drawable/icons8_egypt_24"
                android:drawableLeft="@drawable/icons8_egypt_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/etInputMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:importantForAutofill="no"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                android:inputType="number"
                android:hint="123 - 4567 - 891" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvErrorSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text=""
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="8dp"
            android:layout_gravity="start" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorDivider"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

             <Button
                android:id="@+id/btnGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/background_button"
                android:text="@string/get_otp" />

            <ProgressBar
                android:id="@+id/progressBar_Send"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>
</ScrollView>