<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:layoutDirection="ltr"
    android:scrollbars="none"
    tools:context=".Ui.SignUser.VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/icons_received" />

        <TextView
            android:id="@+id/textVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:text="@string/otp_verification" />

        <TextView
            android:id="@+id/textSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/enter_otp_sent" />

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:gravity="center"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp" />

            <TextView
                android:id="@+id/tvResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/resend_otp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/background_button"
            android:text="@string/verify" />

    </LinearLayout>
</ScrollView>